--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -69,3 +69,12 @@ div.row.quick-access-link {
 .icon-link:hover {
   color: #0b5ed7;
 }
+
+.btn-transparent {
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+}
